2004-04-07  James Tanis  <jtt@buscemi.sysdetect.com>

	* lib/b_ringdir.c: Iteration functions.
	(bk_ringdir_did_rotate_occur): Function to test if rotation
	occured on the last call to bk_ringdir_rotate().
	(bk_ringdir_rotate): Set flag is rotation occrs.
	(bk_ringdir_standard_get_fd): File descriptor accessor.
	(brd_create): Verify that input pattern creates valid filenames.

2004-03-26  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h: bk_struct_registry_t as opaque struct, not void *
	[using void * prevents gcc from finding bugs, requires extra casts]
	
	* lib/b_string.c (bk_string_registry_insert): zero out unused entries;
	don't reduce next_index on forced insert; verify string match on lookup

2004-03-25  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_string.c (bk_string_registry_insert): support for
	BK_STR_REGISTRY_FLAG_FORCE

2004-02-21  Seth Robertson  <seth@sysdetect.com>

	* src/genrand.c: Generate random powerball numbers:
	{ ./genrand -s 5 -n 52 | sort -n; ./genrand -s 1 -n 52; } |
	awk '{sum=;sum++; print	sum;}'

2004-02-16  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_rand.c (USE_MEM_ENTROPY): enable use of uninitialized memory
	for extra entropy only if neither Insure nor Valgrind are around
	
2004-02-11  Seth Robertson  <seth@sysdetect.com>

	* lib/b_stats.c: Talk about how to improve accuracy

2004-02-09  Seth Robertson  <seth@pearl.sysdetect.com>

	* include/libbk_net.h (BAKA_TCPHDR_FLAGECE|FLAGCWR): Add "new" RFC
	flags

2004-02-05  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_string.c (bk_memdiff): #2904: use u_char comparison

2004-02-05  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_string.c (bk_memdiff): #2904: workaround using memcmp

	* xml/b_search.c (bkxml_nodesearch): Actually set *last like we
	say we will

2004-01-29  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_cksum.c (bk_in_cksum): Simplify interface

2004-01-28  Seth Robertson  <seth@startide.sysdetect.com>
