@@ -1,3 +1,9 @@
+2004-04-14  James Tanis  <jtt@buscemi.sysdetect.com>
+
+	* lib/b_ringdir.c (bk_ringdir_filename_predecessor): Use full path
+	pattern. 
+	(bk_ringdir_filename_successor): ditto.
+
 2004-04-07  James Tanis  <jtt@buscemi.sysdetect.com>
 
 	* lib/b_ringdir.c: Iteration functions.
